--- a/BFC.html
+++ b/BFC.html
@@ -40,7 +40,8 @@
 
 </body>
 <script>
-  // BFC定义: 块格式化上下文(Block Formatting Context)
+  // BFC定义: 块格式化上下文(Block Formatting Context)用于清除浮动，防止margin重叠
   // 是Web页面可视化CSS渲染的一部分,是块盒子的布局过程发生的区域，也是浮动元素与其他元素交互的区域。
+  // 
 </script>
 </html>
