--- a/table2.html
+++ b/table2.html
@@ -1,76 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>viewmdoel</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://yc.yonyoucloud.com/cpu-cdn/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<style type="text/css">
-    .container .table td{
-        text-align: center!important;
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://yc.yonyoucloud.com/cpu-cdn/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <style type="text/css">
+    .container .table td {
+      text-align: center !important;
     }
-    .container .table th{
-        text-align: center!important;
+    .container .table th {
+      text-align: center !important;
     }
-</style>
-<div class="container">
-	<table class="table table-bordered">
-		<caption width="100%">Monthly savings</caption>
-		<tr>
-			<td colspan="4" align="center">这是一个标题</td>
-		</tr>
+  </style>
+  <div class="container">
+    <table class="table table-bordered">
+      <caption width="100%">
+        Monthly savings
+      </caption>
+      <tr>
+        <td colspan="4" align="center">这是一个标题</td>
+      </tr>
 
-		<tr>
-			<td width="25%">11</td> 
-			<td width="25%">11</td> 
-			<td width="25%">11</td> 
-			<td width="25%">11</td> 
-		</tr>
+      <tr>
+        <td width="25%">11</td>
+        <td width="25%">11</td>
+        <td width="25%">11</td>
+        <td width="25%">11</td>
+      </tr>
 
-		<tr>
-			<td width="25%" rowspan="3">22</td>
-			<td width="25%">22</td> 
-			<td width="25%">22</td> 
-			<td width="25%">22</td> 
-		</tr>
+      <tr>
+        <td width="25%" rowspan="3">22</td>
+        <td width="25%">22</td>
+        <td width="25%">22</td>
+        <td width="25%">22</td>
+      </tr>
 
-		<tr>
-			<td width="25%">33</td>
-			<td width="25%">33</td>
-			<td width="25%">33</td> 
-		</tr>
+      <tr>
+        <td width="25%">33</td>
+        <td width="25%">33</td>
+        <td width="25%">33</td>
+      </tr>
 
-		<tr>
-			<td width="25%" colspan="3">44</td>
-		</tr>
+      <tr>
+        <td width="25%" colspan="3">445566</td>
+      </tr>
 
-		<tr>
-			<td width="25%">55</td> 
-			<td width="25%">55</td> 
-			<td width="25%" colspan="2">55</td>
-		</tr>
-	</table>
+      <tr>
+        <td width="25%">55</td>
+        <td width="25%">55</td>
+        <td width="25%" colspan="2">5566</td>
+      </tr>
+    </table>
 
-	<table border="1" class="table table-bordered">
-	  <caption width="100%">Monthly savings</caption>
-	  <colgroup>
-	    <col span="3" style="background-color:pink">
-	    <col style="background-color:yellow">
-	  </colgroup>
-	  <tr>
-	    <th width="25%">Month</th>
-	    <th width="25%">Savings</th>
-	    <th width="25%">Savings</th>
-	    <th width="25%">Savings</th>
-	  </tr>
-	  <tr>
-	    <td width="25%">January</td>
-	    <td width="25%">$100</td>
-	    <td width="25%">January</td>
-	    <td width="25%">$100</td>
-	  </tr>
-	</table>
-</div>
+    <table border="1" class="table table-bordered">
+      <caption width="100%">
+        Monthly savings
+      </caption>
+      <colgroup>
+        <col span="3" style="background-color: pink" />
+        <col style="background-color: yellow" />
+      </colgroup>
+      <tr>
+        <th width="25%">Month</th>
+        <th width="25%">Savings</th>
+        <th width="25%">Savings</th>
+        <th width="25%">Savings</th>
+      </tr>
+      <tr>
+        <td width="25%">January</td>
+        <td width="25%">$100</td>
+        <td width="25%">January</td>
+        <td width="25%">$100</td>
+      </tr>
+    </table>
+  </div>
 </html>
